Added base text

--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
 <h1> 
   Welcome to <i> DRUGTALES </i> !
 </h1>
+
+<p>
+  Drug Tales is an unified interface planned on integrating information from patients, clinicians, and pharmacists
+  including pharmaceutical firms; so it has a broad, purported user-base. What we plan on doing is track patients'
+  health even after their formal discharge from a hospital/ clinic, or from discussions with a doctor, when either
+  has no track of their whereabouts, and possibly establish the prognosis. The doctors would generally suggest a
+  prescription and suggest the diseased to undergo a cycle or two. The big question is what after that?
+
+</p>
+
+<p>
+  Generally, people from developing countries wouldn't even have the wisdom, let alone money, to incentivize them
+  visiting the clinician to report their health status, either if they've recovered/ cured or maybe not. Professionals
+  would agree that if you're not doing good even after religiously following <i> what the doctor ordered </i>, you
+  tend to switch doctor, in lieu of going to the one visited erstwhile, and the story ends there. Additionally, the
+  doctor too has no thrust to trace his/ her clients. Following these undulations, there is no way to confirm (and
+  build a consensus on) if a medicine is effective. These results fuel drug development and push pharmaceutical
+  companies.
+
+</p>
+
+<p>
+  This is exactly where <b> DRUGTALES </b> may come in handy. For anyone (patient) connected to Internet, via a modest
+  network bandwidth, can report their experiences with doctors, prescriptions, and diagnosis, reporting issues about
+  their temporal physiology and side effects (if any) they've experienced. We must not loose sight of the fact that most
+  drugs follow commercialization cycle after approval over animal models primary and then a clinical trial, that does
+  not necessarily incubate generalization of all documented physiology. This is a compelling notion that corroborates
+  the likes of organs-on-chip and biomimetics studies.
+</p>
+
