--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-<h1> 
+<!-- Inline CSS -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color: white; margin:auto;}
+h1   {color: black;}
+p    {color: grey; text-align: justify;}
+
+div{
+   width: 500px;
+   height:300px;
+   border:solid
+ }
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    style="text-align: center";
+    }
+
+</style>
+</head>
+<body>
+
+<!-- HTML -->
+
+
+<h1>
   Welcome to <i> DRUGTALES </i> !
 </h1>
 
@@ -31,3 +61,9 @@
   the likes of organs-on-chip and biomimetics studies.
 </p>
 
+<div>
+  <img src="data/drugTales1.jpeg" alt="Graphical Abstract">
+</div>
+
+</body>
+</html>
