Aligned the image to the center of the page and added caption.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@ body {background-color: white; margin:auto;}
 h1   {color: black;}
 p    {color: grey; text-align: justify;}
 
-div{
-   width: 500px;
-   height:300px;
-   border:solid
- }
-
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    style="text-align: center";
-    }
-
 </style>
 </head>
 <body>
@@ -29,8 +16,10 @@ img{
 
 
 <h1>
-  Welcome to <i> DRUGTALES </i> !
+  Welcome to <i> DRUG TALES </i> !
 </h1>
+
+<h2> What? </h2>
 
 <p>
   Drug Tales is an unified interface planned on integrating information from patients, clinicians, and pharmacists
@@ -41,14 +30,17 @@ img{
 
 </p>
 
+<h2> Why? </h2>
+
 <p>
-  Generally, people from developing countries wouldn't even have the wisdom, let alone money, to incentivize them
-  visiting the clinician to report their health status, either if they've recovered/ cured or maybe not. Professionals
-  would agree that if you're not doing good even after religiously following <i> what the doctor ordered </i>, you
-  tend to switch doctor, in lieu of going to the one visited erstwhile, and the story ends there. Additionally, the
-  doctor too has no thrust to trace his/ her clients. Following these undulations, there is no way to confirm (and
-  build a consensus on) if a medicine is effective. These results fuel drug development and push pharmaceutical
-  companies.
+  Generally, people from underdeveloped and developing countries wouldn't even have the wisdom, let alone money, to 
+  incentivize them visiting the clinician to report their health status, either if they've recovered/ cured or maybe 
+  not. Professionals would agree that if you're not doing good even after religiously following <i> what the doctor 
+  ordered </i>, you tend to switch doctor, in lieu of going to the one visited erstwhile, and the story ends there. 
+  Additionally, the doctor too has no thrust to trace his/ her clients. From the vantage point of ethics too, it is
+  a travesty that doctors deny the tenets of medical profession, and the patients are dodging their duties. Following
+  these undulations, there is no way to confirm (and build a consensus on) if a medicine is truly effective. These 
+  results fuel drug development and push pharmaceutical companies.
 
 </p>
 
@@ -61,9 +53,20 @@ img{
   the likes of organs-on-chip and biomimetics studies.
 </p>
 
-<div>
-  <img src="data/drugTales1.jpeg" alt="Graphical Abstract">
-</div>
+
+<p>
+  <center>
+    <figure>
+      <img src="data/drugTales1.jpeg" 
+      alt="Graphical Abstract" 
+      style="border:5px solid black" 
+      width="600" height="350"/>
+      <figcaption>
+        An illustration of the problem statement.
+      </figcaption>
+    </figure>
+  </center>
+</p>
 
 </body>
 </html>
