Added illustration on the proposed workflow.

--- a/index.html
+++ b/index.html
@@ -68,5 +68,28 @@ p    {color: grey; text-align: justify;}
   </center>
 </p>
 
+<h2> How? </h2>
+
+<p>
+  We would like to reciprocate what many intellectuals believe - <i> Data is the new oil </i>. We are looking to harness 
+  the potential of the data available on variegated social media platforms, and unravel the feedback loops and comments 
+  present in there to understand the trails of a drug administration.
+</p>
+
+<p>
+  <center>
+    <figure>
+      <img src="data/DrugTalesTechnical.jpg" 
+      alt="Putative Workflow" 
+      style="border:5px solid black" 
+      width="600" height="350"/>
+      <figcaption>
+        The proposed workflow.
+      </figcaption>
+    </figure>
+  </center>
+</p>
+
+
 </body>
 </html>
