--- a/index.html
+++ b/index.html
@@ -73,23 +73,39 @@ p    {color: grey; text-align: justify;}
 <p>
   We would like to reciprocate what many intellectuals believe - <i> Data is the new oil </i>. We are looking to harness 
   the potential of the data available on variegated social media platforms, and unravel the feedback loops and comments 
-  present in there to understand the trails of a drug administration.
+  present in there to understand the trails of a drug administration. This pipeline, as illustrated below, shall work in 
+  tandem (in the background) to fetch the contemporary conversations on the medicines, and amalgamate the information to
+  the <b> DRUGTALES </b> platform, thus ameliorating its dexterity.
+   
 </p>
 
 <p>
   <center>
     <figure>
       <img src="data/DrugTalesTechnical.jpg" 
-      alt="Putative Workflow" 
+      alt="Putative Workflow from Social Media" 
       style="border:5px solid black" 
       width="600" height="350"/>
       <figcaption>
-        The proposed workflow.
+        The proposed workflow where data is mapped from social media.
       </figcaption>
     </figure>
   </center>
 </p>
 
+<p>
+  <center>
+    <figure>
+      <img src="data/consolidatedOverview.jpg" 
+      alt="Putative overall Workflow" 
+      style="border:5px solid black" 
+      width="600" height="350"/>
+      <figcaption>
+        The culmination of data from social media and DrugTales platform.
+      </figcaption>
+    </figure>
+  </center>
+</p>
 
 </body>
 </html>
