Fix margins and add reference to Joe Selby

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p    {color: grey; text-align: justify;}
 
 </style>
 </head>
-<body>
+<body style="margin: 30px;padding:0">
 
 <!-- HTML -->
 
@@ -50,7 +50,9 @@ p    {color: grey; text-align: justify;}
   their temporal physiology and side effects (if any) they've experienced. We must not loose sight of the fact that most
   drugs follow commercialization cycle after approval over animal models primary and then a clinical trial, that does
   not necessarily incubate generalization of all documented physiology. This is a compelling notion that corroborates
-  the likes of organs-on-chip and biomimetics studies.
+  the likes of organs-on-chip and biomimetics studies. Even Patient-Centered Outcomes Research Institute (PCORI)'s former 
+  execute director <a href="https://dx.doi.org/10.1001/jama.2014.11100">Joe Selby</a> would concur that "listening to 
+  patients" is paramount.  
 </p>
 
 
@@ -75,7 +77,7 @@ p    {color: grey; text-align: justify;}
   the potential of the data available on variegated social media platforms, and unravel the feedback loops and comments 
   present in there to understand the trails of a drug administration. This pipeline, as illustrated below, shall work in 
   tandem (in the background) to fetch the contemporary conversations on the medicines, and amalgamate the information to
-  the <b> DRUGTALES </b> platform, thus ameliorating its dexterity.
+  the <b> DrugTales </b> platform, thus ameliorating its dexterity.
    
 </p>
 
@@ -94,12 +96,31 @@ p    {color: grey; text-align: justify;}
 </p>
 
 <p>
+
+  We came across a relevant publication in this category- <a href="https://dx.doi.org/10.1109/COMSNETS.2016.7440000"> PeopleSave</a>. 
+  The paper “PeopleSave: Recommending effective drugs through web crowdsourcing” introduces a system that leverages patient reviews from
+  the internet to recommend effective drugs. By collecting and filtering reviews from various online sources, PeopleSave ensures the 
+  reliability of the information and analyzes it contextually to understand patient-reported outcomes. The system’s architecture includes
+  modules for data collection, filtering, contextual analysis, and recommendation generation, using advanced algorithms to process natural
+  language. The evaluation shows that PeopleSave’s recommendations align well with actual patient outcomes, demonstrating the potential 
+  of web crowdsourcing in enhancing drug recommendation accuracy and relevance. The study highlights the benefits and challenges of this
+  approach, suggesting future improvements for more patient-centered healthcare.  
+  
+</p>
+
+<p>
+  We want to carry forward the baton by not just crowdsourcing the feedbacks on drugs, which not only do we attempt to enhance further, 
+  albeit also superlay the dedicated and upfront feedbacks from the DrugTales interface. 
+</p>
+
+
+<p>
   <center>
     <figure>
       <img src="data/consolidatedOverview.jpg" 
       alt="Putative overall Workflow" 
       style="border:5px solid black" 
-      width="600" height="350"/>
+      width="600" height="300"/>
       <figcaption>
         The culmination of data from social media and DrugTales platform.
       </figcaption>
