Added information on AskAPatient

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ p    {color: grey; text-align: justify;}
       style="border:5px solid black" 
       width="600" height="350"/>
       <figcaption>
-        An illustration of the problem statement.
+        Fig. 1: An illustration of the problem statement.
       </figcaption>
     </figure>
   </center>
@@ -89,7 +89,7 @@ p    {color: grey; text-align: justify;}
       style="border:5px solid black" 
       width="600" height="350"/>
       <figcaption>
-        The proposed workflow where data is mapped from social media.
+        Fig. 2: The proposed workflow where data is mapped from social media.
       </figcaption>
     </figure>
   </center>
@@ -109,6 +109,16 @@ p    {color: grey; text-align: justify;}
 </p>
 
 <p>
+  Furthermore, while one may be drawn towards comparison with <a href="https://www.askapatient.com"> Ask a Patient</a>, which although aligns 
+  to the same objective, yet stands in isolation with the information on social media platforms; this conglomeration is vital to bolstering
+  our objectivity of drugs' evaluation. Moreover, while the website's database hosts information on about 4000 only FDA-approved drugs, doctors
+  may prescribe drugs <b> "off-label" </b> if they believe that the drug is the best treatment option for their patient, even if it is not 
+  approved for that specific use. This is often the case when there are no other FDA-approved treatments available for a particular condition. 
+  Certainly, it is important to note that off-label drug use is not without risks, an exercise that may be termed as <i> conjectural repurposing </i>.
+  Also, it is possible for drugs that are not approved by the FDA to be consumed in other countries owing to variegated regulatory standards. 
+</p>
+
+<p>
   We want to carry forward the baton by not just crowdsourcing the feedbacks on drugs, which not only do we attempt to enhance further, 
   albeit also superlay the dedicated and upfront feedbacks from the DrugTales interface. 
 </p>
@@ -122,7 +132,7 @@ p    {color: grey; text-align: justify;}
       style="border:5px solid black" 
       width="600" height="300"/>
       <figcaption>
-        The culmination of data from social media and DrugTales platform.
+        Fig. 3: The culmination of data from social media and DrugTales platform.
       </figcaption>
     </figure>
   </center>
